--- a/Text_classification/colab.ipynb
+++ b/Text_classification/colab.ipynb
@@ -126,7 +126,7 @@
         "outputId": "7576f243-6699-40b0-864f-cd79f14bb190",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 234
+          "height": 235
         }
       },
       "source": [
@@ -190,7 +190,7 @@
         "print('List of Filtered apccepted words ')\n",
         "print(wordsFiltered)\n",
         "  \n",
-        "# words \n",
+        "words \n",
         "\n",
         "# data = open('001.txt').read()\n",
         "# stopWords = set(stopwords.words('english'))\n",
